<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".KetProcie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
    <TextView
            android:id="@+id/nama_procie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Procie"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Deskripsi"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/link"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:autoLink="all"
            android:id="@+id/sumber1"
            android:text="@string/sumber_satu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:autoLink="all"
            android:id="@+id/sumber2"
            android:text="@string/sumber_dua"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:autoLink="all"
            android:id="@+id/sumber3"
            android:text="@string/sumber_tiga"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:autoLink="all"
            android:id="@+id/sumber4"
            android:text="@string/sumber_keempat"/>
    </LinearLayout>
</ScrollView>